--- a/sass/input.scss
+++ b/sass/input.scss
@@ -11,6 +11,11 @@ h1 {
   bottom: 50px;
 }
 
+.hand {
+  position: absolute;
+  bottom: 50px;
+}
+
 
 @keyframes move {
   0%{transform: translateY(0px) scale(1);}
