--- a/sass/input.scss
+++ b/sass/input.scss
@@ -19,6 +19,8 @@ h1 {
   position: absolute;
   bottom: 50vh;
   left: 100px;
+  animation: targetMove 4s alternate infinite;
+
 }
 
 
@@ -39,5 +41,11 @@ h1 {
 
 .move{
   animation: move 2s ease forwards;
+
+}
+@keyframes targetMove {
+  0% {transform: translateX(0);}
+  100% {transform: translateX(500px);}
+
 
 }
