--- a/sass/input.scss
+++ b/sass/input.scss
@@ -32,6 +32,16 @@ ul{
 
 }
 
+.targetDrop {
+  height: 200px;
+  width: 100px;
+  img {
+    height: 200px;
+    width: 100px;
+
+  }
+}
+
 #wrapper {
   width: 95%;
   position: absolute;
@@ -46,9 +56,7 @@ ul{
   width: 200px;
 }
 
-.thrower {
-  border: 1px solid blue;
-}
+
 
 @keyframes move {
   0%{transform: translateY(0px) scale(1);}
