--- a/sass/input.scss
+++ b/sass/input.scss
@@ -1,3 +1,8 @@
+html {
+  background: url("../img/background.png") no-repeat center left fixed;
+  background-size: cover;
+}
+
 h1 {
   color: red;
 }
@@ -47,12 +52,10 @@ ul{
   position: absolute;
   bottom: 10px;
   height: 200px;
-  border: 10px solid red;
 }
 .hand {
   position: relative;
   bottom: 50px;
-  border: 1px solid green;
   width: 200px;
 }
 
@@ -83,7 +86,7 @@ ul{
 
 @keyframes targetMove {
   0% {transform: translateX(0);}
-  100% {transform: translateX(500px);}
+  100% {transform: translateX(1500px);}
 }
 
 .targetMove {
