--- a/sass/input.scss
+++ b/sass/input.scss
@@ -23,29 +23,98 @@ ul{
 
 #target {
   height: 200px;
-  width: 100px;
-
+  width: 150px;
+  animation: targetMove 3s  linear alternate infinite;
   position: absolute;
   bottom: 50vh;
   left: 100px;
   img {
     height: 200px;
-    width: 100px;
-    animation: wiggle .1s  alternate infinite;
+    width: 150px;
   }
-  // animation: targetMove 3s alternate infinite;
-
+  #leftarm {
+    position: absolute;
+    height: 60%;
+    width: 30%;
+    top: 105px;
+    left: 50px;
+    z-index: 5;
+    animation: armMove .75s linear alternate-reverse infinite;
+  }
+  #rightarm {
+    position: absolute;
+    height: 60%;
+    width: 30%;
+    top: 105px;
+    left: 60px;
+    z-index: -5;
+    animation: armMove .75s linear alternate infinite;
+  }
+  #wheel {
+    position: absolute;
+    height: 130px;
+    width: 130px;
+    left: 9px;
+    top: 150px;
+    animation: rotate 3s linear alternate infinite;
+  }
 }
 
-.targetDrop {
+#target2 {
   height: 200px;
-  width: 100px;
+  width: 150px;
+  animation: targetMove 3s  linear alternate-reverse infinite;
+  position: absolute;
+  bottom: 35vh;
+  left: 100px;
   img {
     height: 200px;
-    width: 100px;
-
+    width: 150px;
+  }
+  #leftarm2 {
+    position: absolute;
+    height: 60%;
+    width: 30%;
+    top: 105px;
+    left: 50px;
+    z-index: 5;
+    animation: armMove .75s linear alternate-reverse infinite;
+  }
+  #rightarm2 {
+    position: absolute;
+    height: 60%;
+    width: 30%;
+    top: 105px;
+    left: 60px;
+    z-index: -5;
+    animation: armMove .75s linear alternate infinite;
+  }
+  #wheel2 {
+    position: absolute;
+    height: 130px;
+    width: 130px;
+    left: 9px;
+    top: 150px;
+    animation: rotate 3s linear alternate-reverse infinite;
   }
 }
+
+.targetDrop, .targetDrop2 {
+  height: 300px;
+  width: 250px;
+  img {
+    height: 250px;
+    width: 180px;
+    position:absolute;
+  }
+  #sizer {
+    height: 40%;
+    width: 40%;
+    position: absolute;
+  }
+
+}
+
 
 #wrapper {
   width: 95%;
@@ -89,10 +158,26 @@ ul{
   100% {transform: translateX(1500px);}
 }
 
-.targetMove {
-  animation: targetMove 3s alternate infinite;
+// .targetMove {
+//   animation: targetMove 3s alternate infinite;
+// }
+// @keyframes wiggle {
+//   0% {transform: rotate(5deg);}
+//   100% {transform: rotate(-5deg);}
+// }
+
+@keyframes armMove {
+  from {transform: rotate(80deg); transform-origin: center top;}
+  to {transform: rotate(-90deg); transform-origin: center top;}
 }
-@keyframes wiggle {
-  0% {transform: rotate(5deg);}
-  100% {transform: rotate(-5deg);}
+
+@keyframes fireball {
+  0% {transform: scale(0);}
+  50%{transform: scale(8);}
+  100%{transform: scale(0);}
+}
+
+.fireball {
+  animation: fireball .5s linear;
+
 }
